--- a/Lab1_Quinten/prediction-ui/templates/user_form.html
+++ b/Lab1_Quinten/prediction-ui/templates/user_form.html
@@ -18,7 +18,7 @@
     <label for="ptratio">Pupil-teacher ratio:</label>
     <input type="text" id="ptratio" name="ptratio" placeholder="ptratio"> <br>
 
-    <label for="lstat">Body mass index:</label>
+    <label for="lstat">% lower status of the population:</label>
     <input type="text" id="lstat" name="lstat" placeholder="lstat"> <br>
     <p><input type='submit' value='Check'/></p>
 </form>
