--- a/training_ui/templates/training_template.html
+++ b/training_ui/templates/training_template.html
@@ -1,6 +1,6 @@
 <html>
     <body>
-        <form action="/upload_training_data" method="POST">
+        <form action="/training_ui" method="POST">
             <h1>Check my house price!</h1>
             <label for="crim">Training data:</label>
             <input type="file" id="training_data" name="training_data" placeholder="Training data"> <br>
