set secret in training_ui

--- a/training_ui/templates/training_template.html
+++ b/training_ui/templates/training_template.html
@@ -1,8 +1,8 @@
 <html>
     <body>
         <form action="/training_ui" method="POST">
-            <h1>Check my house price!</h1>
-            <label for="crim">Training data:</label>
+            <h1>Model Management</h1>
+            <label for="training_data">Training data:</label>
             <input type="file" id="training_data" name="training_data" placeholder="Training data"> <br>
             <p><input type='submit' value='Check'/></p>
         </form>
