Added training endpoint

--- a/training_ui/templates/training_template.html
+++ b/training_ui/templates/training_template.html
@@ -6,5 +6,9 @@
             <input type="file" id="training_data" name="training_data" placeholder="Training data"> <br>
             <p><input type='submit' value='Check'/></p>
         </form>
+        <form action="/train_model" method="POST">
+            <label for="training_data">Train model</label>
+            <p><input type='submit' value='Train'/></p>
+        </form>
     </body>
 </html>
