Fixed post endpoint

--- a/training_ui/templates/training_template.html
+++ b/training_ui/templates/training_template.html
@@ -1,7 +1,7 @@
 <html>
     <body>
         <h1>Model Management</h1>
-        <form action="/training_ui/" method="POST">
+        <form action="/training_ui" method="POST">
             <label for="training_data">Training data:</label>
             <input type="file" id="training_data" name="training_data" placeholder="Training data"> <br>
             <p><input type='submit' value='Check'/></p>
