--- a/training_ui/templates/training_template.html
+++ b/training_ui/templates/training_template.html
@@ -4,7 +4,7 @@
         <form enctype="multipart/form-data" action="/upload_data" method="POST">
             <label for="training_data">Training data:</label>
             <input type="file" id="training_data" name="training_data" accept=".json" placeholder="Training data"> <br>
-            <p><input type='submit' value='Check'/></p>
+            <p><input type='submit' value='Upload'/></p>
         </form>
         <form action="/train_model" method="POST">
             <label for="training_data">Train model</label>
